[workspace]
members = ["to_folder", "to_720p", "renamer", "to_mp3", "video_thumbnail", "macros", "serde_convert", "getvideos"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
log = "0.4"
pretty_env_logger = "0.5"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
