[package]
name = "anime_song_magnet"
version = "0.1.0"
edition = "2021"

[dependencies]
clap.workspace = true
log.workspace = true
anyhow.workspace = true
pretty_env_logger.workspace = true
# surrealdb.workspace = true
directories.workspace = true
tokio.workspace = true
serde.workspace = true
macros = { path = "../macros" }
nyaa-si = "0.1"
mal-api = "2"
serde_json = "1"
