[package]
name = "mergevideos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
log.workspace = true
anyhow.workspace = true
pretty_env_logger.workspace = true
macros = { path = "../macros" }
