[package]
name = "serde_convert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
toml = "0.7"
clap.workspace = true
log.workspace = true
anyhow.workspace = true
pretty_env_logger.workspace = true
macros = { path = "../macros" }
