[package]
name = "to_720p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matroska = "0.25"
mp4 = "0.13"
humantime = "2"
log.workspace = true
clap.workspace = true
anyhow.workspace = true
pretty_env_logger.workspace = true
macros = { path = "../macros" }
