[package]
name = "webp2jpg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25"
clap.workspace = true
log.workspace = true
anyhow.workspace = true
walkdir.workspace = true
pretty_env_logger.workspace = true
macros = { path = "../macros" }
infer = "0.15"
